made a new reactor gui to account for the nuclear waste, moved more packets to their own classes for better management purposes, added back the rack charger's model,added translation helper methods